# Undertext

./: .gitignore  README.md
client/: vlc-undertext-plugin.c
docs/: INSTALLATION.md
encoder/: Makefile  sdi_vanc_injector.c  subtitle_encoder.c
examples/: test_subtitles.srt
scripts/: build.sh
undertext-server/: Cargo.toml  env.example
undertext-server/migrations/: 20240101000001_initial_schema.sql
undertext-server/src/: auth.rs  config.rs  database.rs  encryption.rs  main.rs  models.rs  routes.rs
vlc-patch/: vbi-sub-es.diff
