[package]
name = "undertext-server"
version = "0.1.0"
edition = "2021"
authors = ["Mehmet T. AKALIN <makalin@gmail.com>"]
description = "Backend microservice for Undertext stenographic subtitle broadcasting system"
license = "MIT"

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenv = "0.15"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Encryption
aes = "0.8"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"

# OAuth and JWT
jsonwebtoken = "9.2"
oauth2 = "4.4"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Configuration
config = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# CORS
actix-cors = "0.6"

# Rate limiting
actix-ratelimit = "0.1"

[dev-dependencies]
tokio-test = "0.4" 